Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -1,13 +1,278 @@
-# 102.3 Урок 1
+# 102.4 Урок 1
 
 | **Сертификат:** | LPIC-1                                    |
 |:----------------|:------------------------------------------|
 | **Версия:**     | 5.0                                       |
 | **Тема:**       | 102 Установка Linux и управление пакетами |
-| **Цель:**       | 102.3 Управление общими библиотеками      |
+| **Цель:**       | 102.4 Использование менеджера пакетов Debian |
 | **Урок:**       | 1 из 1                                    |
 
 
 ## Введение
 
-Давным-давно, когда Linux был еще в зачаточном состоянии, наиболее распространенным способом распространения программного обеспечения был сжатый файл (обычно архив .tar.gz) с исходным кодом, который вы распаковывали и компилировали самостоятельно. Однако по мере роста количества и сложности программного обеспечения необходимость в способе распространения предварительно скомпилированного программного обеспечения стала очевидной. В конце концов, не у всех были ресурсы, как по времени, так и по вычислительной мощности, для компиляции больших проектов, таких как ядро ​​Linux или X-сервер. Вскоре усилились попытки стандартизировать способ распространения этих программных «пакетов», и родились первые менеджеры пакетов. Эти инструменты значительно упростили установку, настройку или удаление программного обеспечения из системы. Одним из них был формат пакета Debian (.deb) и его пакетный инструмент (dpkg). Сегодня они широко используются не только в самом Debian, но и в его производных, таких как Ubuntu и производных от него. Другой инструмент управления пакетами, популярный в системах на базе Debian, - Advanced Package Tool (apt), который может упростить многие аспекты установки, обслуживания и удаления пакетов, что значительно упрощает его. В этом уроке мы узнаем, как использовать dpkg и apt для получения, установки, обслуживания и удаления программного обеспечения в системе Linux на основе Debian.
+Давным-давно, когда Linux был еще в зачаточном состоянии, наиболее распространенным способом распространения программного обеспечения был сжатый файл (обычно архив `.tar.gz`) с исходным кодом, который вы распаковывали и компилировали самостоятельно. 
+
+Однако по мере роста количества и сложности программного обеспечения необходимость в способе распространения предварительно скомпилированного программного обеспечения стала очевидной. В конце концов, не у всех были ресурсы, как по времени, так и по вычислительной мощности, для компиляции больших проектов, таких как ядро Linux или X-сервер. 
+
+Вскоре усилились попытки стандартизировать способ распространения этих программных «пакетов», и родились первые менеджеры пакетов. Эти инструменты значительно упростили установку, настройку или удаление программного обеспечения из системы. 
+
+Одним из них был формат пакета Debian (`.deb`) и его пакетный инструмент (`dpkg`). Сегодня они широко используются не только в самом Debian, но и в его производных, таких как Ubuntu и производных от него. 
+
+Другой инструмент управления пакетами, популярный в системах на базе Debian, - Advanced Package Tool (apt), который может упростить многие аспекты установки, обслуживания и удаления пакетов, что значительно упрощает его. 
+
+В этом уроке мы узнаем, как использовать `dpkg` и `apt` для получения, установки, обслуживания и удаления программного обеспечения в системе Linux на основе Debian.
+
+
+## Инструмент пакетов Debian (dpkg)
+
+Инструмент *Debian Package* (`dpkg`) - это важная утилита для установки, настройки, обслуживания и удаления пакетов программного обеспечения в системах на основе Debian. Самая простая операция - установить пакет `.deb`, что можно сделать с помощью:
+```console
+# dkpg -i PACKAGENAME
+```
+Где `PACKAGENAME` - это имя файла `.deb`, который вы хотите установить. 
+
+Обновление пакетов выполняется таким же образом. Перед установкой пакета `dpkg` проверит, существует ли уже  в системе предыдущая версия. В этом случае пакет будет обновлен до новой версии. В противном случае будет установлена новая копия.
+
+
+## Работа с зависимостями
+
+Очень часто пакет может зависеть от других пакетов. Например, редактору изображений могут потребоваться библиотеки для открытия файлов JPEG, или другой служебной программе может потребоваться набор инструментов для виджетов, такой как Qt или GTK, для своего пользовательского интерфейса. 
+
+`dpkg` проверит, установлены ли эти зависимости в вашей системе, и не сможет установить пакет, если это не так. В этом случае `dpkg` перечислит, какие пакеты отсутствуют. Однако он не может самостоятельно решать зависимости. Пользователь должен найти пакеты `.deb` с соответствующими зависимостями и установить их. 
+
+В приведенном ниже примере пользователь пытается установить пакет видеоредактора OpenShot, но некоторые зависимости отсутствуют:
+```console
+# dpkg -i openshot-qt_2.4.3+dfsg1-1_all.deb
+(Reading database ... 269630 files and directories currently installed.)
+Preparing to unpack openshot-qt_2.4.3+dfsg1-1_all.deb ...
+Unpacking openshot-qt (2.4.3+dfsg1-1) over (2.4.3+dfsg1-1) ...
+dpkg: dependency problems prevent configuration of openshot-qt:
+ openshot-qt depends on fonts-cantarell; however:
+  Package fonts-cantarell is not installed.
+ openshot-qt depends on python3-openshot; however:
+  Package python3-openshot is not installed.
+ openshot-qt depends on python3-pyqt5; however:
+  Package python3-pyqt5 is not installed.
+ openshot-qt depends on python3-pyqt5.qtsvg; however:
+  Package python3-pyqt5.qtsvg is not installed.
+ openshot-qt depends on python3-pyqt5.qtwebkit; however:
+  Package python3-pyqt5.qtwebkit is not installed.
+ openshot-qt depends on python3-zmq; however:
+  Package python3-zmq is not installed.
+
+dpkg: error processing package openshot-qt (--install):
+ dependency problems - leaving unconfigured
+Processing triggers for mime-support (3.60ubuntu1) ...
+Processing triggers for gnome-menus (3.32.0-1ubuntu1) ...
+Processing triggers for desktop-file-utils (0.23-4ubuntu1) ...
+Processing triggers for hicolor-icon-theme (0.17-2) ...
+Processing triggers for man-db (2.8.5-2) ...
+Errors were encountered while processing:
+ openshot-qt
+```
+Как показано выше, OpenShot зависит от пакетов `fonts-cantarell`, `python3-openshot`, `python3-pyqt5`, `python3-pyqt5.qtsvg`, `python3-pyqt5.qtwebkit` и `python3-zmq`. Все это необходимо установить до того, как установка OpenShot будет успешной.
+
+
+## Удаление пакетов
+
+Чтобы удалить пакет, передайте `dpkg` параметр `-r`, а затем имя пакета. Например, следующая команда удалит пакет `unrar` из системы:
+```console
+# dpkg -r unrar
+(Reading database ... 269630 files and directories currently installed.)
+Removing unrar (1:5.6.6-2) ...
+Processing triggers for man-db (2.8.5-2) ...
+```
+Операция удаления также запускает проверку зависимостей, и пакет не может быть удален, если все остальные пакеты, зависящие от него, также не будут удалены. Если вы попытаетесь это сделать, вы получите сообщение об ошибке, подобное приведенному ниже:
+```console
+# dpkg -r p7zip
+dpkg: dependency problems prevent removal of p7zip:
+ winetricks depends on p7zip; however:
+  Package p7zip is to be removed.
+ p7zip-full depends on p7zip (= 16.02+dfsg-6).
+
+dpkg: error processing package p7zip (--remove):
+ dependency problems - not removing
+Errors were encountered while processing:
+ p7zip
+```
+Вы можете передать несколько имен пакетов в `dpkg -r`, поэтому все они будут удалены сразу. 
+
+Когда пакет удаляется, соответствующие файлы конфигурации остаются в системе. Если вы хотите удалить все, что связано с пакетом, используйте параметр `-P` (очистка) вместо `-r`.
+
+>Вы можете заставить `dpkg` установить или удалить пакет, даже если зависимости не соблюдаются, добавив параметр `--force`, как в `dpkg -i --force PACKAGENAME`. Однако это, скорее всего, приведет установленный пакет или даже вашу систему в нерабочее состояние. Не используйте `--force`, если вы не уверены в том, что делаете.
+
+
+## Получение информации о пакете
+
+Чтобы получить информацию о пакете `.deb`, такую как его версия, архитектура, поддержка, зависимости и многое другое, используйте команду `dpkg` с параметром `-I`, за которым следует имя файла пакета, который вы хотите проверить:
+```console
+# dpkg -I google-chrome-stable_current_amd64.deb
+ new Debian package, version 2.0.
+ size 59477810 bytes: control archive=10394 bytes.
+    1222 bytes,    13 lines      control
+   16906 bytes,   457 lines   *  postinst             #!/bin/sh
+   12983 bytes,   344 lines   *  postrm               #!/bin/sh
+    1385 bytes,    42 lines   *  prerm                #!/bin/sh
+ Package: google-chrome-stable
+ Version: 76.0.3809.100-1
+ Architecture: amd64
+ Maintainer: Chrome Linux Team <chromium-dev@chromium.org>
+ Installed-Size: 205436
+ Pre-Depends: dpkg (>= 1.14.0)
+ Depends: ca-certificates, fonts-liberation, libappindicator3-1, libasound2 (>= 1.0.16), libatk-bridge2.0-0 (>= 2.5.3), libatk1.0-0 (>= 2.2.0), libatspi2.0-0 (>= 2.9.90), libc6 (>= 2.16), libcairo2 (>= 1.6.0), libcups2 (>= 1.4.0), libdbus-1-3 (>= 1.5.12), libexpat1 (>= 2.0.1), libgcc1 (>= 1:3.0), libgdk-pixbuf2.0-0 (>= 2.22.0), libglib2.0-0 (>= 2.31.8), libgtk-3-0 (>= 3.9.10), libnspr4 (>= 2:4.9-2~), libnss3 (>= 2:3.22), libpango-1.0-0 (>= 1.14.0), libpangocairo-1.0-0 (>= 1.14.0), libuuid1 (>= 2.16), libx11-6 (>= 2:1.4.99.1), libx11-xcb1, libxcb1 (>= 1.6), libxcomposite1 (>= 1:0.3-1), libxcursor1 (>> 1.1.2), libxdamage1 (>= 1:1.1), libxext6, libxfixes3, libxi6 (>= 2:1.2.99.4), libxrandr2 (>= 2:1.2.99.3), libxrender1, libxss1, libxtst6, lsb-release, wget, xdg-utils (>= 1.0.2)
+ Recommends: libu2f-udev
+ Provides: www-browser
+ Section: web
+ Priority: optional
+ Description: The web browser from Google
+  Google Chrome is a browser that combines a minimal design with sophisticated technology to make the web faster, safer, and easier.
+```
+
+
+## Список установленных пакетов и их содержимого
+
+Чтобы получить список всех пакетов, установленных в вашей системе, используйте параметр `--get-selections`, как в `dpkg --get-selections`. Вы также можете получить список всех файлов, установленных конкретным пакетом, передав параметр `-L PACKAGENAME` в `dpkg`, как показано ниже:
+```console
+# dpkg -L unrar
+/.
+/usr
+/usr/bin
+/usr/bin/unrar-nonfree
+/usr/share
+/usr/share/doc
+/usr/share/doc/unrar
+/usr/share/doc/unrar/changelog.Debian.gz
+/usr/share/doc/unrar/copyright
+/usr/share/man
+/usr/share/man/man1
+/usr/share/man/man1/unrar-nonfree.1.gz
+```
+
+
+## Определение того, какой пакет яляется владельцем конкретного файла
+
+Иногда вам может потребоваться выяснить, какой пакет владеет конкретным файлом в вашей системе. Вы можете сделать это с помощью утилиты `dpkg-query`, за которой следует параметр `-S` и путь к рассматриваемому файлу:
+``` console
+# dpkg-query -S /usr/bin/unrar-nonfree
+unrar: /usr/bin/unrar-nonfree
+```
+
+
+## Перенастройка установленных пакетов
+
+Когда пакет установлен, существует этап настройки, называемый пост-установкой, на котором запускается сценарий для настройки всего необходимого для запуска программного обеспечения, такого как разрешения, размещение файлов конфигурации и т. д. Это также может вызвать у пользователя некоторые вопросы установить предпочтения относительно того, как будет работать программное обеспечение. 
+
+Иногда из-за поврежденного или некорректного файла конфигурации вам может потребоваться восстановить настройки пакета до их «свежего» состояния. Или вы можете изменить ответы, которые вы дали на вопросы начальной конфигурации. Для этого запустите утилиту `dpkg-reconfigure`, после которой укажите имя пакета. 
+
+Эта программа создаст резервную копию старых файлов конфигурации, распакует новые в правильные каталоги и запустит сценарий после установки, предоставленный пакетом, как если бы пакет был установлен впервые. Попробуйте перенастроить пакет `tzdata` с помощью следующего примера:
+```console
+# dpkg-reconfigure tzdata
+```
+
+
+## Расширенный пакетный инструмент (APT)
+
+*Advanced Package Tool* (APT) - это система управления пакетами, включающая набор инструментов, которая значительно упрощает установку, обновление, удаление пакетов и управление ими. APT предоставляет такие функции, как расширенные возможности поиска и автоматическое разрешение зависимостей. 
+
+APT не заменяет `dpkg`. Вы можете думать об этом как о «внешнем интерфейсе», оптимизирующем операции и заполняющем пробелы в функциональности `dpkg`, например о разрешении зависимостей. 
+
+APT работает совместно с репозиториями программного обеспечения, которые содержат пакеты, доступные для установки. Такие репозитории могут быть локальным или удаленным сервером или (реже) даже диском CD-ROM. 
+
+Дистрибутивы Linux, такие как Debian и Ubuntu, поддерживают свои собственные репозитории, а другие репозитории могут поддерживаться разработчиками или группами пользователей для предоставления программного обеспечения, недоступного в основных репозиториях дистрибутива. 
+
+Есть много утилит, которые взаимодействуют с APT, основными из которых являются: 
+
+`apt-get`  
+используется для загрузки, установки, обновления или удаления пакетов из системы. 
+
+`apt-cache`  
+используется для выполнения операций, таких как поиск, в индексе пакета. 
+
+`apt-file`  
+используется для поиска файлов внутри пакетов. 
+
+Существует также более «дружелюбная» утилита, названная просто `apt`, объединяющая в одной утилите наиболее часто используемые опции `apt-get` и `apt-cache`. Многие команды для `apt` такие же, как и для `apt-get`, поэтому во многих случаях они взаимозаменяемы. Однако, поскольку `apt` не может быть установлен в системе, рекомендуется научиться использовать `apt-get` и `apt-cache`.
+
+>Для `apt` и `apt-get` может потребоваться сетевое соединение, поскольку пакеты и индексы пакетов могут потребоваться для загрузки с удаленного сервера.
+
+
+## Обновление индекса пакета
+
+Перед установкой или обновлением программного обеспечения с помощью APT рекомендуется сначала обновить индекс пакетов, чтобы получить информацию о новых и обновленных пакетах. Это делается с помощью команды `apt-get`, за которой следует параметр `update`:
+```console
+# apt-get update
+Ign:1 http://dl.google.com/linux/chrome/deb stable InRelease
+Hit:2 https://repo.skype.com/deb stable InRelease
+Hit:3 http://us.archive.ubuntu.com/ubuntu disco InRelease
+Hit:4 http://repository.spotify.com stable InRelease
+Hit:5 http://dl.google.com/linux/chrome/deb stable Release
+Hit:6 http://apt.pop-os.org/proprietary disco InRelease
+Hit:7 http://ppa.launchpad.net/system76/pop/ubuntu disco InRelease
+Hit:8 http://us.archive.ubuntu.com/ubuntu disco-security InRelease
+Hit:9 http://us.archive.ubuntu.com/ubuntu disco-updates InRelease
+Hit:10 http://us.archive.ubuntu.com/ubuntu disco-backports InRelease
+Reading package lists... Done
+```
+>Вместо `apt-get update` вы также можете использовать `apt update`.
+
+
+## Установка и удаление пакетов
+
+После обновления индекса пакета вы можете теперь установить пакет. Это делается с помощью `apt-get install`, за которым следует имя пакета, который вы хотите установить:
+```console
+# apt-get install xournal
+Reading package lists... Done
+Building dependency tree
+Reading state information... Done
+The following NEW packages will be installed:
+  xournal
+0 upgraded, 1 newly installed, 0 to remove and 75 not upgraded.
+Need to get 285 kB of archives.
+After this operation, 1041 kB of additional disk space will be used.
+```
+Точно так же, чтобы удалить пакет, используйте команду `apt-get remove`, за которой следует имя пакета:
+```console
+# apt-get remove xournal
+Reading package lists... Done
+Building dependency tree
+Reading state information... Done
+The following packages will be REMOVED:
+  xournal
+0 upgraded, 0 newly installed, 1 to remove and 75 not upgraded.
+After this operation, 1041 kB disk space will be freed.
+Do you want to continue? [Y/n]
+```
+Имейте в виду, что при установке или удалении пакетов APT выполнит автоматическое разрешение зависимостей. Это означает, что любые дополнительные пакеты, необходимые для устанавливаемого пакета, также будут установлены, и что пакеты, которые зависят от пакета, который вы удаляете, также будут удалены. APT всегда будет показывать, что будет установлено или удалено, прежде чем спросить, хотите ли вы продолжить:
+```console
+# apt-get remove p7zip
+Reading package lists... Done
+Building dependency tree
+The following packages will be REMOVED:
+  android-libbacktrace android-libunwind android-libutils
+  android-libziparchive android-sdk-platform-tools fastboot p7zip p7zip-full
+0 upgraded, 0 newly installed, 8 to remove and 75 not upgraded.
+After this operation, 6545 kB disk space will be freed.
+Do you want to continue? [Y/n]
+```
+Обратите внимание, что при удалении пакета соответствующие файлы конфигурации остаются в системе. Чтобы удалить пакет и любые файлы конфигурации, используйте параметр `purge` вместо `remove` или параметр `remove` с параметром `--purge`:
+```console
+# apt-get purge p7zip
+```
+или
+```console
+# apt-get remove --purge p7zip
+```
+>Вы также можете использовать `apt install` и `apt remove`.
+
+
+## Исправление нарушеных зависимостей
+
+В системе могут быть «нарушенные зависимости». Это означает, что один или несколько установленных пакетов зависят от других пакетов, которые не были установлены или больше не присутствуют. Это может произойти из-за ошибки APT или из-за пакета, установленного вручную. 
+
+Чтобы решить эту проблему, используйте команду `apt-get install -f`. Она попытается «исправить» сломанные пакеты, установив недостающие зависимости, гарантируя, что все пакеты снова будут согласованы.
+
+>Вы также можете использовать `apt install -f`.
+
+
+## Обновление пакетов
+
