Update 102.4 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.4 Use Debian package management/102.4 Lesson 1.md
@@ -276,3 +276,197 @@ Do you want to continue? [Y/n]
 
 ## Обновление пакетов
 
+APT можно использовать для автоматического обновления любых установленных пакетов до последних версий, доступных в репозиториях. Это делается с помощью команды `apt-get upgrade`. Перед его запуском сначала обновите индекс пакета с помощью `apt-get update`:
+```console
+# apt-get update
+Hit:1 http://us.archive.ubuntu.com/ubuntu disco InRelease
+Hit:2 http://us.archive.ubuntu.com/ubuntu disco-security InRelease
+Hit:3 http://us.archive.ubuntu.com/ubuntu disco-updates InRelease
+Hit:4 http://us.archive.ubuntu.com/ubuntu disco-backports InRelease
+Reading package lists... Done
+
+# apt-get upgrade
+Reading package lists... Done
+Building dependency tree
+Reading state information... Done
+Calculating upgrade... Done
+The following packages have been kept back:
+  gnome-control-center
+The following packages will be upgraded:
+  cups cups-bsd cups-client cups-common cups-core-drivers cups-daemon
+  cups-ipp-utils cups-ppdc cups-server-common firefox-locale-ar (...)
+
+74 upgraded, 0 newly installed, 0 to remove and 1 not upgraded.
+Need to get 243 MB of archives.
+After this operation, 30.7 kB of additional disk space will be used.
+Do you want to continue? [Y/n]
+```
+Сводка в нижней части выходных данных показывает, сколько пакетов будет обновлено, сколько будет установлено, удалено или сохранено, общий размер загрузки и сколько дополнительного дискового пространства потребуется для завершения операции. Чтобы завершить обновление, просто ответьте `Y` и подождите, пока `apt-get` завершит задачу. 
+
+Чтобы обновить один пакет, просто запустите `apt-get upgrade`, а затем укажите имя пакета. Как и в случае с `dpkg`, `apt-get` сначала проверяет, установлена ли предыдущая версия пакета. В этом случае пакет будет обновлен до последней версии, доступной в репозитории. В противном случае будет установлена новая копия.
+
+>Вы также можете использовать apt upgrade и apt update.
+
+
+## Локальный кеш
+
+Когда вы устанавливаете или обновляете пакет, соответствующий `.deb` файл загружается в каталог локального кэша перед установкой пакета. По умолчанию это каталог `/var/cache/apt/archives`. Частично загруженные файлы копируются в `/var/cache/apt/archives/partial/`. 
+
+По мере установки и обновления пакетов каталог кеша может стать довольно большим. Чтобы освободить место, вы можете очистить кеш с помощью команды `apt-get clean`. Это удалит содержимое каталогов `/var/cache/apt/archives` и `/var/cache/apt/archives/partial/`.
+
+```console
+You can also use apt clean.
+```
+
+
+## Поиск пакетов
+
+Утилиту `apt-cache` можно использовать для выполнения операций с индексом пакета, таких как поиск определенного пакета или перечисление пакетов, содержащих конкретный файл. 
+
+Чтобы выполнить поиск, используйте поиск `apt-cache` с последующим шаблоном поиска. Результатом будет список всех пакетов, содержащих шаблон, либо в имени пакета, либо в описании, либо в предоставленных файлах.
+
+```console
+# apt-cache search p7zip
+liblzma-dev - XZ-format compression library - development files
+liblzma5 - XZ-format compression library
+forensics-extra - Forensics Environment - extra console components (metapackage)
+p7zip - 7zr file archiver with high compression ratio
+p7zip-full - 7z and 7za file archivers with high compression ratio
+p7zip-rar - non-free rar module for p7zip
+```
+
+В приведенном выше примере запись `liblzma5 - XZ-format compression library` не соответствует шаблону. Однако, если мы покажем полную информацию, включая описание, для пакета с помощью параметра `show`, мы найдем там шаблон:
+```console
+# apt-cache show liblzma5
+Package: liblzma5
+Architecture: amd64
+Version: 5.2.4-1
+Multi-Arch: same
+Priority: required
+Section: libs
+Source: xz-utils
+Origin: Ubuntu
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+Original-Maintainer: Jonathan Nieder <jrnieder@gmail.com>
+Bugs: https://bugs.launchpad.net/ubuntu/+filebug
+Installed-Size: 259
+Depends: libc6 (>= 2.17)
+Breaks: liblzma2 (<< 5.1.1alpha+20110809-3~)
+Filename: pool/main/x/xz-utils/liblzma5_5.2.4-1_amd64.deb
+Size: 92352
+MD5sum: 223533a347dc76a8cc9445cfc6146ec3
+SHA1: 8ed14092fb1caecfebc556fda0745e1e74ba5a67
+SHA256: 01020b5a0515dbc9a7c00b464a65450f788b0258c3fbb733ecad0438f5124800
+Homepage: https://tukaani.org/xz/
+Description-en: XZ-format compression library
+ XZ is the successor to the Lempel-Ziv/Markov-chain Algorithm
+ compression format, which provides memory-hungry but powerful
+ compression (often better than bzip2) and fast, easy decompression.
+ .
+ The native format of liblzma is XZ; it also supports raw (headerless)
+ streams and the older LZMA format used by lzma. (For 7-Zip's related
+ format, use the p7zip package instead.)
+ ```
+Вы можете использовать *регулярные выражения* с шаблоном поиска, что позволяет выполнять очень сложный (и точный) поиск. Однако эта тема выходит за рамки данного урока.
+
+>Вы также можете использовать `apt search` вместо поиска `apt-cache` и `apt show` вместо `apt-cache show`.
+
+
+## Список источников
+
+APT использует список источников, чтобы узнать, откуда брать пакеты. Этот список хранится в файле `sources.list`, расположенном в каталоге `/etc/apt`. Этот файл можно редактировать непосредственно с помощью текстового редактора, такого как `vi`, `pico` или `nano`, или с помощью графических утилит, таких как `aptitude` или `synaptic`. Типичная строка внутри `sources.list` выглядит так:
+
+```console
+deb http://us.archive.ubuntu.com/ubuntu/ disco main restricted universe
+multiverse
+```
+
+В этом синтаксисе есть тип архива, URL, распространение и один или несколько компонентов, где: 
+
+Archive type  
+Репозиторий может содержать пакеты с готовым к запуску программным обеспечением (двоичные пакеты, тип `deb`) или с исходным кодом этого программного обеспечения (исходные пакеты, тип `deb-src`). В приведенном выше примере представлены бинарные пакеты. 
+
+URL  
+URL-адрес репозитория. 
+
+Распространение  
+Имя (или кодовое имя) дистрибутива, для которого предоставляются пакеты. В одном репозитории могут размещаться пакеты для нескольких дистрибутивов. В приведенном выше примере диско - это кодовое имя для Ubuntu 19.04 Disco Dingo. 
+
+Компоненты  
+Каждый компонент представляет собой набор пакетов. Эти компоненты могут отличаться в разных дистрибутивах Linux. Например, в Ubuntu и производных версиях это: 
+
+основной  
+содержит официально поддерживаемые пакеты с открытым исходным кодом. 
+
+ограниченный  
+содержит официально поддерживаемое программное обеспечение с закрытым исходным кодом, например драйверы устройств для графических карт. 
+
+вселенная  
+содержит программное обеспечение с открытым исходным кодом, поддерживаемое сообществом. 
+
+мультивселенная  
+содержит неподдерживаемое программное обеспечение, программное обеспечение с закрытым исходным кодом или обремененное патентами. В Debian основными компонентами являются: 
+
+основной  
+состоит из пакетов, совместимых с Руководством по свободному программному обеспечению Debian (DFSG), работа которых не зависит от программного обеспечения за пределами этой области. Включенные здесь пакеты считаются частью дистрибутива Debian. 
+
+вклад  
+содержит пакеты, совместимые с DFSG, но которые зависят от других пакетов, которых нет в `main`. 
+
+несвободный  
+содержит пакеты, несовместимые с DFSG. 
+
+безопасность  
+содержит обновления безопасности. 
+
+резервные копии  
+содержит более свежие версии пакетов, которые находятся в файле `main`. Цикл разработки стабильных версий Debian довольно длинный (около двух лет), и это гарантирует, что пользователи могут получить самые свежие пакеты без необходимости изменять основной репозиторий ядра.
+
+>Вы можете узнать больше о *Руководстве по свободному программному обеспечению Debian* по адресу: https://www.debian.org/social_contract#guidelines
+
+Чтобы добавить новый репозиторий для получения пакетов, вы можете просто добавить соответствующую строку (обычно предоставляемую сопровождающим репозитория) в конец `sources.list`, сохранить файл и перезагрузить индекс пакета с помощью `apt-get update`. После этого пакеты в новом репозитории будут доступны для установки с помощью `apt-get install`. 
+
+Имейте в виду, что строки, начинающиеся с символа `#`, считаются комментариями и игнорируются.
+
+
+### Каталог `/etc/apt/sources.list.d`
+
+Внутри каталога `/etc/apt/sources.list.d` вы можете добавлять файлы с дополнительными репозиториями, которые будут использоваться APT, без необходимости изменять основной файл `/etc/apt/sources.list`. Это простые текстовые файлы с таким же синтаксисом, как описано выше, и с расширением файла `.list`. 
+
+Ниже вы видите содержимое файла с именем `/etc/apt/sources.list.d/buster-backports.list`:
+```console
+deb http://deb.debian.org/debian buster-backports main contrib non-free
+deb-src http://deb.debian.org/debian buster-backports main contrib non-free
+```
+
+### Список содержимого пакета и поиск файлов
+
+Утилиту под названием `apt-file` можно использовать для выполнения дополнительных операций с индексом пакета, таких как перечисление содержимого пакета или поиск пакета, содержащего определенный файл. Эта утилита может не быть установлена в вашей системе по умолчанию. В этом случае вы обычно можете установить его с помощью `apt-get`:
+```console
+# apt-get install apt-file
+```
+После установки вам нужно будет обновить кеш пакетов, используемый для `apt-file`:
+```console
+# apt-file update
+```
+Обычно это занимает всего несколько секунд. После этого вы готовы к использованию `apt-file`. 
+
+Чтобы вывести список содержимого пакета, используйте параметр `list`, за которым следует имя пакета:
+```console
+# apt-file list unrar
+unrar: /usr/bin/unrar-nonfree
+unrar: /usr/share/doc/unrar/changelog.Debian.gz
+unrar: /usr/share/doc/unrar/copyright
+unrar: /usr/share/man/man1/unrar-nonfree.1.gz
+```
+>Вы также можете использовать `apt list` вместо списка `apt-file`.
+
+Вы можете искать файл во всех пакетах, используя параметр поиска, за которым следует имя файла. Например, если вы хотите узнать, какой пакет предоставляет файл с именем `libSDL2.so`, вы можете использовать:
+```console
+# apt-file search libSDL2.so
+libsdl2-dev: /usr/lib/x86_64-linux-gnu/libSDL2.so
+```
+Ответ - пакет `libsdl2-dev`, который предоставляет файл `/usr/lib/x86_64-linux-gnu/libSDL2.so`. 
+
+Разница между поиском `apt-file` и `dpkg-query` заключается в том, что поиск `apt-file` также будет искать неустановленные пакеты, в то время как `dpkg-query` может отображать только файлы, принадлежащие установленному пакету.
+
